Make changes to Act 3 formatting scripts

--- a/JP_Data/processing/dz_act3_test.html
+++ b/JP_Data/processing/dz_act3_test.html
@@ -1,149 +1,17 @@
 ----<br>
-1073<br>
-[S]ジェイド：ジョンとチャットをする。<br>
-<br>
-– gardenGnostic物知り庭師[GG]がectoBiologist心霊生物学者[EB]を悩ませ始めました。17:25 –<br>
-<br>
-GG：ジョン！私のプレゼント受け取った？？<br>
-EB：やぁ！<br>
-EB：えっと、まだ。<br>
-GG：もう！何で？緑の箱に入れて送ったのに<span class="santen">……</span><br>
-EB：あっ！<br>
-EB：それはあったよ、でもお父さんの車の中にあってしかも今は出かけてるんだ。<br>
-EB：すぐ戻って来ると思うけど。<br>
-GG：よかったー！！！今日は何してたの？<br>
-EB：スバーブに夢中になってたよ。<br>
-EB：TTは僕の家をめちゃくちゃにするつもりだ。<br>
-GG：笑！<br>
-GG：スバーブってなに？？<br>
-EB：あっ、ゲームのことだよ。<br>
-EB：大丈夫。まだ全部把握できてないから。<br>
-GG：わあああ なになになに？？？？？<br>
-EB：何があったの？<br>
-GG：家の外ですっごい大きな音がした！！<br>
-GG：爆発みたい！！！！！<br>
-EB：えっ、ほんと？<br>
-GG：外に出て見てくる<span class="santen">…</span><br>
-EB：わかった、気をつけてね？<br>
-GG：了解！ :)<br>
-<br>
-– gardenGnostic物知り庭師[GG]はectoBiologist心霊生物学者[EB]を悩ませるのをやめました。 17:28 –<br>
-<br>
-– gardenGnostic物知り庭師[GG]がectoBiologist心霊生物学者[EB]を悩ませ始めました。 –<br>
-<br>
-GG：ただいま！<br>
-EB：あっ、おかえり！<br>
-GG：さっきの爆発音を調べてたの<br>
-EB：それ、もしかして隕石だった？<br>
-GG：うん！！！！！<br>
-GG：どうして知ってるの？？<br>
-EB：えっと、長ーい話になるよ！<br>
-EB：とにかく大丈夫だった？君の庭が吹き飛ばされたか火事にでもならなかった？<br>
-GG：ううん 私のとこは大丈夫！<br>
-GG：遠くの方に落ちていったからそれで見に行ったの<br>
-GG：隕石はかなり大きかったわ<br>
-GG：でもベックが通せんぼしてきて<br>
-GG：だからさっき帰ってきたの<br>
-GG：あの子も危険だと気づいたのね！<br>
-EB：彼は正しいことをしたと思うよ！<br>
-GG：あれからジョンは何してたの？<br>
-GG：あっ！！！！私が送ったもの届いた？:O<br>
-EB：えーっと<span class="santen">…</span>。<br>
-EB：その、受け取ろうとしたけど、ローズが父さんの車を薄気味悪い底なしの谷底に落としちゃった。その小包は車の中にあったんだ、ホントに残念なんだけど。<br>
-GG：そんな！<br>
-EB：わかった、最初から話した方がいいかも<br>
-EB：隕石が降ってきて近所が吹き飛ばされたんだ。<br>
-GG：そんなことになっていたなんて！ホントごめん！<br>
-EB：僕は大丈夫だよ！まだ僕の家は残ってるから。<br>
-EB：ローズと一緒にプレイしていたゲームのせいなのか、隕石が落ちてくるどたんばで異次元に送られたんだ。<br>
-EB：でも今は窮地に追いやられてる、なんだか怪しくて暗いしまだ父さんも見つからない、そして車とゲームディスクを失った、僕達はこの世の終りから世界を救わなければならないんだ！！！<br>
-GG：O_O<br>
-GG：えっと<span class="santen">…</span><br>
-GG：それってホント変だし怖いけど<span class="santen">…</span><br>
-GG：でも面白そう！<br>
-GG：よくわからないけどジョン、これは運命の日なのかもしれない<br>
-GG：誰かが世界を救うことができるとしたらそれは多分あなただと思う！<br>
-EB：えっ、そう思う？<br>
-GG：うん！<br>
-EB：わかった、でも。<br>
-EB：そう簡単なことじゃないさ！<br>
-EB: ローズを隕石と火事から助け出すために接続しようとしたんだけど。<br>
-EB：彼女のパソコンの充電が切れてゲームディスクを無くしちゃったんだ！<br>
-EB：それで僕がＴＧに頼んで彼女を救うために彼が持ってるゲームのコピーを使えないかと思ったんだ！<br>
-EB：でもあのバカ、ラップばっかで黙らないんだよ。<br>
-GG：アハハッ<br>
-GG：すっごいバカだよね！<br>
-EB：だね。とにかく彼に手伝ってもらうよう頼んでみなきゃ。すぐ戻るよ。<br>
-<br>
-==&gt;<br>
-<br>
-----<br>
 1074<br>
-==&gt;<br>
 <br>
 – gardenGnostic物知り庭師[GG]がectoBiologist心霊生物学者[EB]を悩ませ始めました。 –<br>
 GG：ジョン！！！！<br>
 EB：わっ、いたんだ！<br>
 GG：冒険の方はどう？<br>
-EB：今のとこ大丈夫、いろいろと問題あるけどローズが再接続して僕を助けてくれれば。<br>
 GG：良かった！<br>
-EB：うん、でも<span class="santen">…</span><br>
-EB：僕は世界を救えているとは思えないんだ:(<br>
-EB：ここで何をやり遂げればいいのかよくわからないけど、世界を救ってる訳じゃないと思う。<br>
-GG：んー　でもあなたがやってることはすごく大事なことだよ！<br>
-GG：希望を捨てないで　ジョンが前向きに考えていればすべてがうまくいくはず<span class="santen">…</span><br>
-GG：ちゃんとナンナおばあちゃんのアドバイスを聞いていればね！<br>
-EB：うん、君の言ってることは正しい。<br>
-EB：でも、ちょっと待って<span class="santen">…</span>。<br>
-EB： 君にナンナの事言ったっけ？<br>
-GG：ああえええと......<br>
-GG：言ってなかった？<br>
-EB：うーん、わかんないけどローズかデイブが言ったのかな。<br>
-GG：うん　多分そうだよ！<br>
-EB：ホント彼らはいつも君について不思議な力があることを説得しようとするけど、僕は「いや、あの子はただの普通の女の子のように見えるよ！」って言うから！<br>
 GG：へへへ:D<br>
-EB：ところで改めて考えてみると、君ってなんでも知っているみたいに見えるときあるけど？<br>
-EB：正直君が喋ってる時よりも、もっと多くを知っているように思うんだよなぁ。なんとなくだけどさ。<br>
-GG：やだっ ジョン<br>
-GG: あなたにたくさん説明したくて<span class="santen">…</span><br>
-GG：いろいろと<span class="santen">…</span><br>
-GG：ちょっと......<br>
-GG：待ってて！<br>
-EB：何を待つんだよ！<br>
-GG：もう！ジョン！！！<br>
-GG：私の家の近くに隕石が落ちたこと言うのを忘れてた！<br>
-EB：あ、そうなの。<br>
-EB：いままでなにが起こってたの？<br>
-GG：ええ<span class="santen">…</span>もう.........<br>
-GG：混乱したんだから<span class="santen">…</span><br>
-GG：ホントに混乱してるのよ！ o_o;<br>
-GG：だから しばらくの間寝ちゃって<span class="santen">…</span><br>
-GG：どのぐらい寝てたかわかんないけど<br>
-GG：起きたらこんなことになっちゃって！！<br>
-EB：うん知ってる、もっと詳しく説明してよ！<br>
-EB：目覚まし時計を常に持ってなきゃいけないかもね。<br>
-EB：それで、その隕石はどうなったの？<br>
-GG：うーん......<br>
-GG：説明するのが難しい！！！<br>
-GG：でも<span class="santen">…</span><br>
-GG：それが何なのか知ってる！<br>
-GG： そして　すべてのことがうまくいくってことも！！！<br>
-EB：だから何だよそれって？？？<br>
-EB：これって君が僕に言った「待っている」の意味なの？？？<br>
-GG：はぁ　ジョンに本当のことを全部話したい！！！<br>
-GG：けどまだそれができないの<br>
-GG：あなたが早く目が覚めるのが先だと思って！<br>
-EB：はぁっ？<br>
-GG：だから文字通りの意味じゃないけど<br>
-GG：ある程度は文字通りの意味よ！<br>
-EB：ぐああ！！！！！！！！！！！！！<br>
-EB：混乱すること言わないでくれ！！！！<br>
-GG：笑 :)<br>
-GG：とにかく行ってみてジョン<br>
-GG：あなたにお客さんが来るみたいよ！！！<br>
 GG：&lt;3<br>
 <br>
-BLUHBLUH<br>
+– gardenGnostic物知り庭師[GG]はectoBiologist心霊生物学者[EB]を悩ませるのをやめました。??：?? –<br>
+<br>
+==&gt;<br>
 <br>
 ----<br>
 1075<br>
@@ -162,13 +30,10 @@ BLUHBLUH<br>
 <br>
 しかしそうすると、たくさんのろうそくが必要になりそうだ。<br>
 <br>
+==&gt;<br>
 1 原文ではエクリプス<br>
-<br>
-BLUHBLUH<br>
-<br>
 ----<br>
 1076<br>
-==&gt;<br>
 <br>
 ベックは君の理解できない理由で、君が神秘の遺跡に入ることを決して許さなかった。<br>
 君はベックが君を守る理由でそうしてきたと思っていた。<br>
@@ -190,19 +55,16 @@ BLUHBLUH<br>
 <br>
 ----<br>
 1078<br>
-&gt;ジェイド：ハープーンを使って大自然に飛び出す。<br>
 <br>
 ==&gt;<br>
 <br>
 ----<br>
 1079<br>
-==&gt;<br>
 <br>
 ==&gt;<br>
 <br>
 ----<br>
 1080<br>
-==&gt;<br>
 <br>
 &gt;ローズ：建築を仕上げる。<br>
 <br>
@@ -288,7 +150,6 @@ TG：後でな<br>
 <br>
 ----<br>
 1088<br>
-==&gt;<br>
 <br>
 君は遂に建築プロジェクトを完成させた。<br>
 君がジョンにしてあげられることは全部した。<br>
@@ -344,7 +205,6 @@ TG：後でな<br>
 <br>
 ----<br>
 1092<br>
-==&gt;<br>
 <br>
 &gt;ローズ：返信する<br>
 <br>
@@ -418,19 +278,17 @@ TT：オファーを受け入れる以外に選択肢はある？<br>
 <br>
 ----<br>
 1094<br>
-==&gt;<br>
 <br>
 ==&gt;<br>
 <br>
 ----<br>
 1095<br>
-==&gt;<br>
+<br>
 <br>
 ==&gt;<br>
 <br>
 ----<br>
 1096<br>
-==&gt;<br>
 <br>
 &gt;デイヴへ<br>
 <br>
@@ -462,7 +320,6 @@ TT：オファーを受け入れる以外に選択肢はある？<br>
 <br>
 ----<br>
 1098<br>
-==&gt;<br>
 <br>
 &gt;デイヴ：返信する。<br>
 <br>
@@ -557,11 +414,9 @@ TG：このクソはクラフトマヨネーズよりリアルだ<br>
 <br>
 adiosToreador [AT]アディオス闘牛士がturntechGodhead機械仕掛けの神性[TG]をブロックしました<br>
 <br>
+&gt;君は今<span class="santen">…</span><br>
 １　ペニスのこと<br>
 ２　原文はNUM　香港？<br>
-<br>
-&gt;君は今<span class="santen">…</span><br>
-<br>
 ----<br>
 1100<br>
 &gt;君は今<span class="santen">…</span><br>
