Add small details

--- a/JP_Data/processing/dz_act5act1.html
+++ b/JP_Data/processing/dz_act5act1.html
@@ -1093,6 +1093,7 @@ OK、それは全く一般的じゃない。<br />
 ----<br />
 2055<br />
 &gt;テレジ:ACをトロールする。<br />
+gallowsCalibrator絞首台校正器[GC]がarsenicCatnipヒ素キャットニップ[AC]を荒らし始めました。<br />
 <br />
 GC:（GCはあなたのち１３な洞窟の前に降り立ち、その高貴で優雅な前足でドアをノックする。）<br />
 GC:（あなたに聞こえることを確認４ながら、彼女は長いキスとともにもう一度ノックをした。）<br />
@@ -2651,7 +2652,7 @@ TC:まザーフぁッきンぶチかマせ！！！！！！！！！！！！<b
 2139<br />
 &gt;アラディア:GAとふざけよう。<br />
 <br />
-grimAuxiliatrixグリム聖母 [GA]がtwinArmageddons ツインアルマゲドン［TA］を荒らし始めました。<br />
+grimAuxiliatrixグリム聖母 [GA]がapocalypseArisen 黙示録の発生［AA］を荒らし始めました。<br />
 <br />
 GA:やあ、また会ったわね、アラディア。<br />
 AA:ええ　嫌だあああああああああ。<br />
@@ -5800,6 +5801,8 @@ CT:D--&gt;今行く。<br />
 <br />
 centaursTesticle ケンタウルスの精巣［CT］がapocalypseArisen 黙示録の発生［AA］を荒らすのをやめました。<br />
 <br />
+AA:げこっ。<br />
+<br />
 &gt;エクィウス:第二のゲートを通過する。<br />
 <br />
 ----<br />
@@ -6509,8 +6512,8 @@ CC:くぷぷ　くぷぷ　くぷぷ　くぷぷ！<br />
 GA:今から顔文字をタイプしないと。<br />
 GA::？<br />
 GA:口をこのように疑問符の形にできる人を誰もしらなくても。<br />
-CG:あ)()(、ごめんなさい！<br />
-CG:ぶくぶくとタイピングをするのをやめられないの。<br />
+CC:あ)()(、ごめんなさい！<br />
+CC:ぶくぶくとタイピングをするのをやめられないの。<br />
 GA:いえ、止められるわ。<br />
 GA:でもあなたの水中血管システムが崩壊して、膨張するポケットをベースにしている場合は大丈夫よ。<br />
 GA:それがあなたが何かに興奮する方法ならね。<br />
